--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 1.3 (unreleased)
 ----------------
+- Added improvements about README file [macagua]
 - Added a GenericSetup Uninstall profile [macagua]
 - Updated manifest file for diazo theme [macagua]
 - Updated Diazo theme zip file [macagua]
